# vocoder

./: README
graph/: vocoder_call_graph.dot  vocoder_gprof_data.txt
src/: vocode.c
zerius/: README
zerius/src/: autogen.sh  configure.ac
zerius/src/src/: Makefile.am
